fixed overflow for compare container

--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,3 @@ body {
   height: 100%;
   width: 100%;
 }
-
-/* #slider:hover {
-  border: 1px solid black;
-} */
